# diagnostics_node

./: CMakeLists.txt  package.xml
scripts/: main.py
src/: lidar_perception_with_diagnostics copy.cpp  lidar_perception_with_diagnostics.cpp
